Resource page overflow fixed

--- a/src/Resources/Resource.css
+++ b/src/Resources/Resource.css
@@ -23,6 +23,11 @@
     margin-bottom: 21px;
 }
 
+#buttonTitles {
+   margin-top: 80px;
+   margin-bottom: 0px;
+}
+
 @media only screen and (max-width: 440px) {
     .links {
         flex-direction: column;
